refactor: bug fix